2026-02-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp: Revert refactoring from commit
	8b165f90ef, 29 December, which caused spurious "spurious end
	trap token detected!" error diagnostics when breaking pages with
	Matt Bishop's "mn" macro package (used by the NetHack
	Guidebook).  Because a variable was renamed later the same day,
	this reversion was done by hand.  Still to be understood: why
	the `br` request handler needs to use `token::next()` instead of
	`skip_line()` as most request handlers do.

	Fixes <https://savannah.gnu.org/bugs/?68026>.

2026-02-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* update-copyright.sh: Drop (unshipped) script.  I implement a
	different approach to the problem it solves; see the "HACKING"
	file.

2026-02-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (maintainer-clean-local): Clean "gnu.eps" file in
	"maintainer mode".

2026-02-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* Makefile.am: Add ".version" file to `MOSTLYCLEANFILES` macro.

2026-02-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/number.cpp (is_valid_term): Reintroduce warning
	in category "tab" when a tab character starts a numeric
	expression.  Lacking it caused the formatter to throw a huge
	number of error diagnostics (with no harmful effect on
	formatting, thus unproductively alarming the user) when
	springing traps in Matt Bishop's vintage "mn" macro package.

	Fixes <https://savannah.gnu.org/bugs/?68017>.  Partially reverts
	commit 64711b3a875, 14 November.

2026-01-20  Deri James  <deri@chuzzlewit.myzen.co.uk>

	Change location of the Inline::C build directory.

	* src/devices/gropdf/gropdf.pl: Update copyright.  Include
	module File::Path (part of perl since before version 5.8).
	Adjust location of Inline::C's cache directory according to XDG
	standards, rather than $HOME/_Inline.

	Fixes <https://savannah.gnu.org/bugs/?67997>.  Thanks to Bruno